# coda-qubic

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CON-45-todo.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LOCAL_INTEGRATION_TEST.md  berkeley-visit-checklist.md  local-integration-test.md
examples/: README.md  channel_config.json  device_hardware.yaml  device_qiskit_sim.yaml  device_rpc.yaml  device_sim.yaml  gmm_classifier.json  gmm_classifier_sim.pkl
scripts/: build-example-gmm-pickle.py  generate_hex_example.py  install-qubic-stack.sh
site/: channel_config.json  device.yaml  gmm_classifier.json  qubitcfg.json
src/coda_qubic/: __init__.py  benchmarks.py  config.py  device.py  executor_factory.py  experiments.py  framework.py  qiskit_sim.py  runner.py  support.py  translator.py
src/coda_qubic/common/: __init__.py  gate_ops.py  helpers.py
tests/: conftest.py  test_common.py  test_compile_integration.py  test_device.py  test_error_handling.py  test_examples_integration.py  test_experiments.py  test_framework.py  test_qiskit_sim.py  test_routines.py  test_runner.py  test_simulator_circuits.py  test_translator.py
