[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coda-qubic"
version = "0.1.0"
description = "QubiC execution framework for coda-node."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "coda-node",
    "pyyaml>=6.0",
]

[tool.uv.sources]
coda-node = { git = "https://github.com/conductorquantum/coda-node.git", branch = "consolidating-native-gate-target-names" }

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "scipy>=1.12.0",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coda_qubic"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "hardware: marks tests requiring a physical QPU connection (deselect with '-m \"not hardware\"')",
]

[tool.coverage.run]
source = ["src/coda_qubic"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "TID", "SIM", "RUF", "C4", "PTH", "PIE"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "distproc.*",
    "qubic.*",
    "qubitconfig.*",
]
ignore_missing_imports = true
